iFeature Changelog

****************************

Version 3.0.3 (12-01-11)
-Adjustment to search results text.
-Posts with no title will now display "Untitled".
-Fixed child theme support.
-Adjustment to UL in comments.
-Fixed bug where not keymaster admins in multisite installs could not access theme options.
-Changed footer styling.
-Fixed visual issues with IE. 

Version 3.0.2 (11-27-11)
-Fixed Google Analytics code option.
-Added missing Header Contact area option.
-Added missing defaults to image options. 

Version 3.0.1 (11-26-11)
-Removed .gitignore file.

Version 3.0 (11-26-11)
-Introduction of CyberChimps Core WordPress Framework. 
-New Theme Options panel using Classy Options Framework.
-Introduction of Drag and Drop page elements. 
-Introduction of custom CSS grid.
-New theme design, includes bordered post and page containers, modified post layout.
-Removed SuperFish, using CSS menu. 
-Twitterbar added for use on a per-page basis. 
-Post formats support added.
-New social icon set added.
-Added post pagination links to single.php.


Version 2.1.3 (11-16-11)
-Social icon z-index fix. 

Version 2.1.2 (11-02-11)
-Added Romanian language po and mo files.
-Removed "default" label from Lucida Grande in font selection dropdown, added it to Arial instead. 
-Added classes for category, tag and date archive titles and adjusted margin.
-Adjusted margin on breadcrumb div. 

Version 2.1.1 (10-25-11)
-Fixed syntax error in search.php
-Removed unecessary PHP closing tags from RSS icon code.
-Removed unecessary esc_url from email icon. 
-Fixed syntax error in archive.php.
-Fixed missing text domain in comments.php.
-Fixed breadcrumb syntax error on page.php
-General HTML elements styling.
-Fixed broken jQuery call. 
-Fixed error in recent posts default widget where scheduled posts were displaying. 

Version 2.1 (10-18-11)
-Added localization support, includes ifeature.pot as well as Spanish and French .po/.mo files. 